--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -5,6 +5,7 @@ api_platform:
         paths: ['%kernel.project_dir%/src/Entity']
     formats:
         json: ['application/json']
+        html: ['text/html']
     patch_formats:
         json: ['application/merge-patch+json']
     swagger:
