--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Denormalizer\BeerDenormalizer:
+        tags: ['serializer.normalizer']
+    App\Denormalizer\BrasserieDenormalizer:
+        tags: ['serializer.normalizer']
+    App\Denormalizer\CheckinDenormalizer:
+        tags: ['serializer.normalizer']
+    App\Denormalizer\UserDenormalizer:
+        tags: ['serializer.normalizer']
