--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,7 @@ services:
         tags: ['serializer.normalizer']
     App\Denormalizer\UserDenormalizer:
         tags: ['serializer.normalizer']
+    
+    App\EventListener\ExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
