--- a/.env
+++ b/.env
@@ -31,3 +31,10 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/beer_api_platform
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=a23ca9f57143e6d9334fe13f8d192b3c
+JWT_TOKEN_TTL=3600
+###< lexik/jwt-authentication-bundle ###
