Feat(Security Authorization management): Allow only user to modify their own account (except ADMIN)

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -37,3 +37,6 @@ services:
     App\EventListener\ExceptionListener:
         tags:
             - { name: kernel.event_listener, event: kernel.exception }
+
+    # App\Event\UserSubscriber:
+    #     tags: ['kernel.event_subscriber']
